--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,46 @@
+:root {
+    --primary: #bc4123;
+    --secondary: #2b3452;
+}
+
 .App {
-  text-align: center;
-}
-
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
-}
-
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
+    text-align: center;
 }
 
 .App-header {
-  background-color: #282c34;
-  min-height: 100vh;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
+    background-color: var(--secondary);
+    /* min-height: 20px; */
+    display: flex;
+    flex-direction: column;
+    align-items: left;
+    justify-content: center;
+    /* font-size: calc(10px + 2vmin); */
+    color: white;
 }
 
 .App-link {
-  color: #61dafb;
+    color: #61dafb;
 }
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+header nav {
+    display: flex;
+    gap: 16px;
+    justify-content: flex-end;
+    max-width: 1200px;
+    /* margin: 0 auto; */
+}
+
+header nav h1 {
+    margin-right: auto;
+    border-bottom: 3px solid var(--primary);
+}
+
+header nav a {
+    /* text-decoration: none; */
+    padding: 6px;
+    border-radius: 4px;
+}
+
+header nav a.active {
+    background: var(--primary);
 }
